tests/syntax-error/expr-4d.silly
// RUN: cd %S
// RUN: %Not %ExeSilly -g expr-4d.silly -o %t.exe 2>&1 | %FileCheck %s
// CHECK: expr-4d.silly:7:14: error: parse error: mismatched input 'EQ' expecting ';'
// CHECK:     7 | PRINT 1 EQ 2 EQ 3;
// CHECK:       |              ^

PRINT 1 EQ 2 EQ 3;
